--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="login">Login</string>
+    <string name="login">Sign in</string>
     <string name="account_empty">Account can\'t be empty</string>
     <string name="password_empty">Password can\'t be empty</string>
     <string name="account">Account</string>
     <string name="password">Password</string>
     <string name="login_success">Login Success</string>
     <string name="login_fail">Login Fail</string>
-
+    <string name="sign_out">Sign out</string>
 </resources>
