--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -7,5 +7,5 @@
     <string name="password">密码</string>
     <string name="login_success">登录成功</string>
     <string name="login_fail">登录失败</string>
-
+    <string name="sign_out">没有账号?</string>
 </resources>
