--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="password">Password</string>
     <string name="login_success">Login Success</string>
     <string name="login_fail">Login Fail</string>
+    <string name="sign_out">没有账号?</string>
 </resources>
