--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -8,4 +8,6 @@
     <string name="login_success">登录成功</string>
     <string name="login_fail">登录失败</string>
     <string name="sign_out">没有账号?</string>
+    <string name="navigation_drawer_open" />
+    <string name="navigation_drawer_close" />
 </resources>
