--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -10,4 +10,5 @@
     <string name="sign_out">没有账号?</string>
     <string name="navigation_drawer_open" />
     <string name="navigation_drawer_close" />
+    <string name="log_out">退出登录</string>
 </resources>
